@@ -1,3 +1,3 @@
 #ifndef KPAT_VERSION
-#define KPAT_VERSION "0.7.1"
+#define KPAT_VERSION "0.7.2"
 #endif
